translation-tool/inputs/source_meta/objects/HSvc_ChronicRule__c.object
<CustomObject>
    <fields>
        <fullName>TotalTimeMinutesEA__c</fullName>
        <formula>IF( ISBLANK( TimeIntervalDaysEA__c ),IF(ISBLANK(  TimeIntervalMinutesEA__c ), 0, TimeIntervalMinutesEA__c ) , IF(ISBLANK( TimeIntervalDaysEA__c ),(TimeIntervalDaysEA__c * 24 * 60) ,( TimeIntervalDaysEA__c + (TimeIntervalDaysEA__c * 24 * 60)) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalTimeMinutesEA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTimeMinutes__c</fullName>
        <formula>IF( ISBLANK(TimeIntervalDays__c ) ,  IF(ISBLANK( TimeIntervalMinutes__c ), 0, (TimeIntervalMinutes__c)) , IF(ISBLANK( TimeIntervalMinutes__c ),(TimeIntervalDays__c * 24 * 60) ,( TimeIntervalMinutes__c + (TimeIntervalDays__c  * 24 * 60)) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalTimeMinutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnflagChronicAsset__c</fullName>
        <inlineHelpText>If the case is closed and the time period(in days) specified by this field has passed then the asset will be marked unchronic.</inlineHelpText>
        <label>Unflag Chronic Asset(in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Chronic Rules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>HSvc_Case_Type_Sub_Type__c</columns>
        <columns>Account__c</columns>
        <columns>HNSProduct__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ExpiryDate__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rule_For_Consumer</fullName>
        <columns>NAME</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ExpiryDate__c</columns>
        <columns>HSvc_Active__c</columns>
        <columns>Account__c</columns>
        <columns>HNSProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_ChronicRule__c.Consumer</value>
        </filters>
        <label>Rule For Consumer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rules_For_Enterprise_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ExpiryDate__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_ChronicRule__c.Enterprise_Account</value>
        </filters>
        <label>Rules For Enterprise Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rules_For_Enterprise_Products</fullName>
        <columns>NAME</columns>
        <columns>HNSProduct__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ExpiryDate__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HSvc_ChronicRule__c.Enterprise_Product</value>
        </filters>
        <label>Rules For Enterprise Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Chronic Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chronic Rules</pluralLabel>
    <recordTypes>
        <fullName>Consumer</fullName>
        <active>true</active>
        <label>Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enterprise_Account</fullName>
        <active>true</active>
        <label>Enterprise - Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enterprise_Product</fullName>
        <active>true</active>
        <label>Enterprise - Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateGreaterThanEffectiveDate</fullName>
        <active>true</active>
        <description>This validation rule ensures that the expiry date is set in future and is greater that the effective date</description>
        <errorConditionFormula>OR(ExpiryDate__c &lt; TODAY(),ExpiryDate__c&lt; EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GiveValueForTimeIntervalType</fullName>
        <active>true</active>
        <description>This validation is for ensuring that the field Time Interval type is populated whenever the time is specified.</description>
        <errorConditionFormula>AND
( 
OR(
RecordType.DeveloperName = &apos;Enterprise_Product&apos;, 
RecordType.DeveloperName = &apos;Enterprise_Account&apos;
), 
NOT(ISBLANK( TimeIntervalDays__c )) ,  
ISBLANK(TEXT( Time_Interval_Type__c )) 
)</errorConditionFormula>
        <errorDisplayField>Time_Interval_Type__c</errorDisplayField>
        <errorMessage>Please select a time interval</errorMessage>
    </validationRules>
</CustomObject>